[package]
name = "lemoa"
version = "0.3.0"
edition = "2021"

[dependencies]
relm4 = "0.6.0"
relm4-components = { version = "0.6.0", features = ["web"] }
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lemmy_api_common = "0.18"
markdown = "0.3"
html2pango = "0.5"
rand = "0.8"
mime_guess = "2.0"
chrono = { version ="0.4", features = ["unstable-locales"] }
timeago = "0.4"
itertools = "0.11"
