[package]
name = "lemoa"
version = "0.5.1"
edition = "2021"

[dependencies]
relm4 = { version = "0.6.2", features = ["libadwaita"] }
relm4-components = { version = "0.6.2", features = ["web"] }
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lemmy_api_common = "0.19"
markdown = "0.3"
html2pango = "0.5"
rand = "0.8"
mime_guess = "2.0"
chrono = "0.4"
timeago = "0.4"
itertools = "0.11"
